--- a/Getting and Cleaning Data/README.Rmd
+++ b/Getting and Cleaning Data/README.Rmd
@@ -4,86 +4,20 @@ author: "Tianming"
 date: "1/15/2021"
 output: html_document
 ---
+# Getting and Cleaning Data Project
+Submitter: Tianming Wu <br />
+Blog Post: [Getting and Cleaning Data Review](https://medium.com/@GalarnykMichael/review-course-1-the-data-scientists-toolbox-jhu-coursera-4d7459458821#.5jpg133ln "Click to go to Repo") <br />
+Data Zip File Location: [UC Irvine Repo](https://d396qusza40orc.cloudfront.net/getdata%2Fprojectfiles%2FUCI%20HAR%20Dataset.zip "Clicking will download the data")
 
+## Project Requirement
+1. Create a tidy data set 
+2. Submit a link to a Github repository for peer review
+3. Submit a README for understanding the codes
+4. Analysis R Script
 
-## download data to current directory
-```{r}
-if(!file.exists("./project_data")){dir.create("./project_data")}
-fileUrL = "https://d396qusza40orc.cloudfront.net/getdata%2Fprojectfiles%2FUCI%20HAR%20Dataset.zip"
-download.file(fileUrL, destfile = "./project_data/project_data.zip")
-unzip("./project_data/project_data.zip", exdir="./project_data/")
-```
-
-## Load activity lebels and features
-```{r}
-activityLabels <- read.table("./project_data/UCI HAR Dataset/activity_labels.txt", header = F)
-colnames(activityLabels) <- c("classLabels", "activityName")
-features <- read.table("./project_data/UCI HAR Dataset/features.txt", header = F)
-colnames(features) <- c("index", "featureNames")
-
-featuresWanted <- grep("(mean|std)\\(\\)", features$featureNames)
-measurements <- features[featuresWanted, ]
-```
-
-## combine train datasets
-```{r}
-TrainMeasure <- read.table("./project_data/UCI HAR Dataset/train/X_train.txt", header = F)
-TrainActivities <- read.table("./project_data/UCI HAR Dataset/train/y_train.txt", header = F)
-TrainSubjects <- read.table("./project_data/UCI HAR Dataset/train/subject_train.txt", header = F)
-colnames(TrainMeasure) <- features$featureNames
-colnames(TrainActivities) <- "Activities"
-colnames(TrainSubjects) <- "SubjectNum"
-TrainMeasureWanted <- TrainMeasure[, measurements$featureNames]
-
-Train <- cbind(TrainSubjects, TrainActivities, TrainMeasureWanted)
-```
-
-
-## combine test datasets
-```{r}
-TestMeasure <- read.table("./project_data/UCI HAR Dataset/test/X_test.txt", header = F)
-TestActivities <- read.table("./project_data/UCI HAR Dataset/test/y_test.txt", header = F)
-TestSubjects <- read.table("./project_data/UCI HAR Dataset/test/subject_test.txt", header = F)
-colnames(TestMeasure) <- features$featureNames
-colnames(TestActivities) <- "Activities"
-colnames(TestSubjects) <- "SubjectNum"
-TestMeasureWanted <- TestMeasure[, measurements$featureNames]
-Test <- cbind(TestSubjects, TestActivities, TestMeasureWanted)
-
-```
-
-
-## merge datasets
-```{r}
-merged <- rbind(Train, Test)
-```
-
-
-## reshape the datasets
-```{r}
-library(reshape2)
-
-head(melt(merged, id = c("SubjectNum", "Activities")), 10)
-
-nrow(melt(merged, id = c("SubjectNum", "Activities")))
-
-## reshape the data table by Subject and Activity
-merged_melt <- melt(merged, id = c("SubjectNum", "Activities"))
-merged_dcast <- dcast(merged_melt, SubjectNum + Activities ~ variable, mean)
-
-## output the tidy result
-write.table(merged_dcast, "reshaped.txt", sep = "\t", col.names = T, row.names = F)
-```
-
-
-
-
-
-
-
-
-
-
+## Explaination
+1. the txt file named "tidy" is the clean data set required by this project
+2. the "run_analysis.R" is the code for reproducibility
 
 
 
